# smia-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  .vercelignore  CLAUDE.md  Dockerfile  PRD.md  PROJECT-STATUS.md  README.md  claude-progress.txt  example.py  features.md  fly.toml  vercel.json  yars_doc.md
api/: index.py  pyproject.toml  requirements.txt
api/cli/: run_digest.py
api/config/: climate_rss_feeds.json  digest_topics.py  health_rss_feeds.json  news_rss_feeds.json  rss_feeds.json
api/core/: auth.py  config.py  dependencies.py  langfuse_config.py  rate_limit.py
api/migrations/: 001_add_cache_tables.sql  002_add_digest_tables.sql  003_add_digest_topics.sql  004_add_digest_windows.sql
api/models/: digest_schemas.py  schemas.py  update_schemas.py
api/routes/: admin.py  ai_daily_report.py  analyze.py  auth.py  bookmarks.py  feedback.py  internal.py  mcp_server.py  reports.py  telegram.py
api/services/: agent.py  cache.py  collector_factory.py  crawler.py  database.py  digest_agent.py  digest_service.py  email_service.py  telegram_service.py  tools.py  update_summarizer.py
api/services/collectors/: __init__.py  arxiv_collector.py  base.py  bluesky_collector.py  currents_collector.py  github_collector.py  guardian_collector.py  hackernews_collector.py  rss_collector.py
api/tests/: conftest.py  test_analyze_quota.py
api/tests/test_core/: test_langfuse_config.py
api/tests/test_integration/: test_digest_pipeline.py
api/tests/test_models/: test_digest_schemas.py  test_schemas.py
api/tests/test_routes/: test_admin.py  test_ai_daily_report.py  test_analyze.py  test_auth.py  test_auth_dependency.py  test_bookmarks.py  test_feedback.py  test_health.py  test_internal.py  test_mcp_server.py  test_reports.py  test_telegram.py
api/tests/test_services/: test_agent.py  test_cache.py  test_collector_factory.py  test_crawler.py  test_digest_agent.py  test_digest_service.py  test_email.py  test_telegram_service.py  test_tools.py  test_update_summarizer.py
api/tests/test_services/test_collectors/: test_arxiv_collector.py  (+7 more)
docs/: PRD.md  (+1 more)
(+91 files in other folders)
