[project]
name = "smia-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.0",
    "fastapi>=0.129.0",
    "feedparser>=6.0.12",
    "firecrawl-py>=4.14.1",
    "httpx>=0.28.1",
    "langfuse>=3.14.1",
    "mcp>=1.26.0",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.59.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "resend>=2.23.0",
    "supabase>=2.28.0",
    "tavily-python>=0.5.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
scraping = ["crawl4ai>=0.4.0"]

[dependency-groups]
dev = [
    "crawl4ai>=0.4.0",
    "httpx>=0.28.1",
    "mypy>=1.13.0",
    "pip-audit>=2.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
strict = false
